--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<meta property="fb:pages" content="195409653821183" />
+<!DOCTYPE html>
+<html>
+  <head><meta property="fb:pages" content="418461155401977" /></head>
+   <body>
+<h1>Hello facebook articles</h1>
+<p></p>
+</body>
+</html>
